--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "axios": "^1.8.4",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
-    "react-secure-storage": "^1.3.2"
+    "react-secure-storage": "^1.3.2",
+    "universal-cookie": "^8.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
