--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
+    "react-clock": "^5.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "react-secure-storage": "^1.3.2",
+    "react-time-picker": "^7.0.0",
     "universal-cookie": "^8.0.1"
   },
   "devDependencies": {
