--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
+    "@mui/x-date-pickers": "^8.5.2",
     "@react-icons/all-files": "^4.1.0",
     "axios": "^1.8.4",
+    "dayjs": "^1.11.13",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
